--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,9 @@
     "sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "stacktrace-js": "~0.6.4",
     "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.0.1",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "ng-file-upload": "~8.0.1",
+    "ng-file-upload-shim": "~8.0.1"
   },
   "resolutions": {
     "angular": "1.4.6",
