--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,7 @@
     "underscore": "~1.5.2"
   },
   "resolutions": {
-    "angular": "1.4.6",
+    "angular": ">=1.4.0",
     "angulartics": "~0.19.0",
     "sweetalert": ">=1.1.0"
   }
