--- a/config.json
+++ b/config.json
@@ -42,7 +42,7 @@
   "development": {
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-      "communities": "communities-dev"
+      "communities": "communities-test"
     },
     "linkedin": {
       "clientID": "75bqixdv58z1az",
@@ -62,7 +62,7 @@
    "test": {
      "db": {
        "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-       "communities": "communities"
+       "communities": "communities-test"
      },
      "linkedin": {
        "clientID": "75bqixdv58z1az",
