--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
   "local": {
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-      "communities": "communities-dev"
+      "communities": "communities-dev",
+      "messages": "messages-dev"
     },
     "linkedin": {
       "clientID": "75bqixdv58z1az",
@@ -27,7 +28,8 @@
   "theme": {
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-      "communities": "communities-dev"
+      "communities": "communities-dev",
+      "messages": "messages-dev"
     },
     "linkedin": {
       "clientID": "75bqixdv58z1az",
@@ -52,7 +54,8 @@
   "development": {
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-      "communities": "communities-test"
+      "communities": "communities-test",
+      "messages": "messages-test"
     },
     "linkedin": {
       "clientID": "75bqixdv58z1az",
@@ -77,7 +80,8 @@
    "test": {
      "db": {
        "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-       "communities": "communities-test"
+       "communities": "communities-test",
+       "messages": "messages-test"
      },
      "linkedin": {
        "clientID": "75bqixdv58z1az",
@@ -102,7 +106,8 @@
   "production": {
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-      "communities": "communities"
+      "communities": "communities",
+      "messages": "messages"
     },
     "linkedin": {
       "clientID": "75bqixdv58z1az",
