--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-proxy": "^1.9.0",
     "jwt-simple": "~0.2.0",
     "knowtify-node": "^0.1.0",
+    "memjs": "^0.8.7",
     "method-override": "~2.1.3",
     "moment": "~2.8.3",
     "morgan": "~1.2.3",
