fixed merge in nav cont

--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,10 @@ deployment:
     branch: dev
     heroku:
       appname: startupcommunity-dev
+  staging:
+      branch: staging
+      heroku:
+        appname: startupcommunity-staging
   production:
     branch: master
     heroku:
