--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,12 @@
     "James Gentes"
   ],
   "description": "StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem",
-  "main": "app/index.html",
+  "main": "../app/index.html",
   "private": true,
   "ignore": [
     "**/.*",
-    "node_modules",
-    "bower_components"
+    "../node_modules",
+    "../bower_components"
   ],
   "appPath": "app",
   "dependencies": {
@@ -33,7 +33,6 @@
     "bootstrap": "~3.3.0",
     "es5-shim": "~4.0.3",
     "fontawesome": "~4.3.0",
-    "iCheck": "~1.0.2",
     "jquery": "~2.1.3",
     "metisMenu": "~1.1.2",
     "mixpanel": "~2.5.1",
