--- a/app/.htaccess
+++ b/app/.htaccess
@@ -214,6 +214,7 @@ AddDefaultCharset utf-8
     Options +FollowSymlinks
   # Options +SymLinksIfOwnerMatch
     RewriteEngine On
+    2klh3hq2a3bblk qa3wlbhkv32wh4bhl3bw2 3lhwb43h bwh3w3l hbwlh3wb
   # RewriteBase /
 </IfModule>
 
