--- a/app/config.json
+++ b/app/config.json
@@ -18,7 +18,7 @@
       "aws_secret_access_key": "yxYv8BFWOeUMnHa1b5YMBZhesfW6Iaj/HB1VaK/m",
       "bucket": "startupcommunity-dev"
     },
-    "helpscout": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
+    "helpcrunch": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
@@ -45,7 +45,7 @@
       "aws_secret_access_key": "yxYv8BFWOeUMnHa1b5YMBZhesfW6Iaj/HB1VaK/m",
       "bucket": "startupcommunity-dev"
     },
-    "helpscout": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
+    "helpcrunch": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
@@ -72,7 +72,7 @@
       "aws_secret_access_key": "yxYv8BFWOeUMnHa1b5YMBZhesfW6Iaj/HB1VaK/m",
       "bucket": "startupcommunity-dev"
     },
-    "helpscout": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
+    "helpcrunch": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
@@ -99,7 +99,7 @@
        "aws_secret_access_key": "yxYv8BFWOeUMnHa1b5YMBZhesfW6Iaj/HB1VaK/m",
        "bucket": "startupcommunity"
      },
-     "helpscout": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
+     "helpcrunch": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
      "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
      "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
      "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
@@ -126,7 +126,7 @@
       "aws_secret_access_key": "yxYv8BFWOeUMnHa1b5YMBZhesfW6Iaj/HB1VaK/m",
       "bucket": "startupcommunity"
     },
-    "helpscout": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
+    "helpcrunch": "yCVzaQb6BMR7oHxYXpI373lTIg13+CVBtpvyd/dt3Rs=",
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
