--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.8.5",
     "express-sslify": "^0.1.1",
     "ghost": "^0.7.0",
+    "ghost-s3-storage": "^0.2.2",
     "grunt": "^0.4.5",
     "http-proxy": "^1.9.0",
     "jsonwebtoken": "^5.4.1",
