--- a/package.json
+++ b/package.json
@@ -5,45 +5,46 @@
   "private": true,
   "dependencies": {
     "aws-sdk": "^2.2.4",
-    "bcryptjs": "~0.7.12",
-    "body-parser": "~1.6.5",
-    "connect-wwwhisper": "0.1.11",
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.14.1",
+    "connect-wwwhisper": "^0.1.13",
     "debug-trace": "~0.2.3",
-    "express": "~4.8.5",
-    "express-sslify": "^0.1.1",
+    "express": "^4.13.3",
+    "express-sslify": "^1.0.1",
     "ghost": "^0.7.0",
     "ghost-s3-storage": "^0.2.2",
     "grunt": "^0.4.5",
     "http-proxy": "^1.9.0",
     "jsonwebtoken": "^5.4.1",
     "knowtify-node": "^0.1.0",
+    "lodash": "^3.10.1",
     "memjs": "^0.8.7",
-    "method-override": "~2.1.3",
-    "morgan": "~1.2.3",
+    "method-override": "^2.3.5",
+    "morgan": "^1.6.1",
     "nodalytics": "^1.1.0",
-    "orchestrate": "~0.5.1",
-    "q": "~1.0.1",
-    "request": "~2.40.0",
-    "request-debug": "~0.1.1",
+    "orchestrate": "~0.6.0",
+    "q": "^1.4.1",
+    "request": "^2.67.0",
+    "request-debug": "^0.2.0",
     "satellizer": "~0.13.0"
   },
   "devDependencies": {
-    "bower": "~1.4.1",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
+    "bower": "^1.7.0",
+    "grunt-concurrent": "^2.1.0",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-copy": "^0.6.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-less": "^0.11.4",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-htmlmin": "^0.6.0",
+    "grunt-contrib-less": "^1.1.0",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.0.0",
-    "grunt-usemin": "^2.4.0",
-    "jshint-stylish": "^1.0.0",
-    "load-grunt-tasks": "^0.6.0",
-    "protractor": "~1.4.0",
+    "grunt-usemin": "^3.1.1",
+    "jshint-stylish": "^2.1.0",
+    "load-grunt-tasks": "^3.3.0",
+    "protractor": "^3.0.0",
     "time-grunt": "^1.0.0"
   },
   "engines": {
