--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "nodalytics": "^1.1.0",
+    "opbeat": "^3.1.4",
     "orchestrate": "~0.6.0",
     "q": "^1.4.1",
     "request": "^2.67.0",
