--- a/bower.json
+++ b/bower.json
@@ -39,10 +39,12 @@
     "ng-file-upload-shim": "~8.0.1",
     "bootstrap-tour": "~0.10.2",
     "angular-bootstrap-tour": "~0.3.3",
-    "angular-toArrayFilter": "~1.0.1"
+    "angular-toArrayFilter": "~1.0.1",
+    "angular-loggly-logger": "~0.1.3",
+    "raygun4js": "~2.1.1"
   },
   "resolutions": {
-    "angular": ">= 1.4.0",
+    "angular": "~1.4.6",
     "angulartics": "~0.19.0",
     "sweetalert": ">=1.1.0",
     "bootstrap": ">=2.3.2",
