--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "opbeat": "^3.1.4",
     "orchestrate": "~0.7.0",
     "q": "^1.4.1",
+    "raygun": "^0.8.3",
     "request": "^2.67.0",
     "request-debug": "^0.2.0",
     "satellizer": "~0.13.0"
@@ -42,6 +43,7 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.0.0",
+    "grunt-raygun-deployment": "^1.1.1",
     "grunt-usemin": "^3.1.1",
     "jshint-stylish": "^2.1.0",
     "load-grunt-tasks": "^3.3.0",
