--- a/bower.json
+++ b/bower.json
@@ -38,8 +38,7 @@
     "ng-file-upload": "~8.0.1",
     "ng-file-upload-shim": "~8.0.1",
     "bootstrap-tour": "~0.10.2",
-    "angular-bootstrap-tour": "~0.3.3",
-    "raygun4js": "~2.1.1"
+    "angular-bootstrap-tour": "~0.3.3"
   },
   "resolutions": {
     "angular": "~1.4.6",
