--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "StartupCommunity.org",
-  "version": "2.1.0",
+  "version": "2.3.0",
   "authors": [
     "James Gentes"
   ],
@@ -8,8 +8,8 @@
   "private": true,
   "appPath": "app",
   "dependencies": {
-    "angular": "~1.4.6",
-    "angular-bootstrap": "~0.12.0",
+    "angular": "~1.4.8",
+    "angular-bootstrap": "~1.1.2",
     "angular-h-sweetalert": "~1.4.5",
     "angular-knowtify": "*",
     "angular-mixpanel": "~1.1.0",
@@ -23,11 +23,11 @@
     "animate.css": "https://github.com/daneden/animate.css.git#~3.2.0",
     "awesome-bootstrap-checkbox": "~0.3.5",
     "angular-xeditable": "~0.1.8",
-    "bootstrap": "~3.3.0",
+    "bootstrap": "~3.3.6",
     "es5-shim": "~4.0.3",
-    "fontawesome": "~4.3.0",
-    "jquery": "~2.1.3",
-    "metisMenu": "~1.1.2",
+    "fontawesome": "~4.5.0",
+    "jquery": "~2.2",
+    "metisMenu": "~2.4.0",
     "mixpanel": "~2.5.1",
     "moment": "~2.8.3",
     "satellizer": "~0.13.0",
@@ -45,6 +45,7 @@
     "sweetalert": ">=1.1.0",
     "bootstrap": ">=2.3.2",
     "jquery": ">= 1.9.0",
-    "bootstrap-tour": "~0.10.2"
+    "bootstrap-tour": "~0.10.2",
+    "angular-route": "~1.4.9"
   }
 }
