--- a/bower.json
+++ b/bower.json
@@ -37,15 +37,18 @@
     "ng-file-upload": "~8.0.1",
     "ng-file-upload-shim": "~8.0.1",
     "bootstrap-tour": "~0.10.2",
-    "angular-bootstrap-tour": "~0.3.3"
+    "angular-bootstrap-tour": "~0.3.3",
+    "angular-cookies": "^1.5.0",
+    "sha512": "https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha512.js"
   },
   "resolutions": {
-    "angular": "~1.4.6",
+    "angular": "1.4.9",
     "angulartics": "~0.19.0",
     "sweetalert": ">=1.1.0",
-    "bootstrap": ">=2.3.2",
+    "bootstrap": "~3.3.6",
     "jquery": ">= 1.9.0",
     "bootstrap-tour": "~0.10.2",
-    "angular-route": "~1.4.9"
+    "angular-route": "~1.4.9",
+    "angular-cookies": "^1.5.0"
   }
 }
