--- a/bower.json
+++ b/bower.json
@@ -38,8 +38,7 @@
     "ng-file-upload-shim": "~8.0.1",
     "bootstrap-tour": "~0.10.2",
     "angular-bootstrap-tour": "~0.3.3",
-    "angular-cookies": "^1.5.0",
-    "sha512": "https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha512.js"
+    "angular-cookies": "^1.5.0"
   },
   "resolutions": {
     "angular": "1.4.9",
