--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "node": "0.12.4"
   },
   "scripts": {
-    "test": "grunt test",
+    "test": "./node_modules/protractor/bin/webdriver-manager update && grunt test",
     "postinstall": "bower install"
   }
 }
