--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-usemin": "^3.1.1",
     "jshint-stylish": "^2.1.0",
     "load-grunt-tasks": "^3.3.0",
+    "phantomjs": "^2.1.3",
     "protractor": "^3.0.0",
     "time-grunt": "^1.0.0"
   },
