--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "grunt-contrib-less": "^1.1.0",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-env": "^0.4.4",
     "grunt-express-server": "^0.5.2",
     "grunt-filerev": "^2.0.0",
     "grunt-protractor-runner": "^3.0.0",
@@ -55,7 +54,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "pretest": "node -v && npm -v && ./node_modules/protractor/bin/webdriver-manager update && export PATH=$PATH:./node_modules/.bin/",
+    "pretest": "export PATH=$PATH:./node_modules/.bin/",
     "postinstall": "bower install"
   }
 }
