Test coverage for login and logout state

--- a/config.local.env
+++ b/config.local.env
@@ -16,4 +16,5 @@ NODE_ENV=local
 SC_API_TOKEN_SECRET=2lknvqk32nvqknv3qlkvn3kvln234lknvqS
 SC_PATH=/app
 SC_TOKEN_SECRET=2l3knfgqlkn2fvkl23nvklgnvkg23bhva08
+SC_DISABLE_API_LOG=1
 WWWHISPER_DISABLE=1
