--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,9 @@
     "ng-file-upload-shim": "~8.0.1",
     "bootstrap-tour": "~0.10.2",
     "angular-bootstrap-tour": "~0.3.3",
-    "angular-cookies": "^1.5.0"
+    "angular-cookies": "^1.5.0",
+    "ladda": "~0.9.8",
+    "angular-ladda": "~0.3.1"
   },
   "resolutions": {
     "angular": "1.4.9",
