--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ghost-s3-storage": "^0.2.2",
     "grunt": "^0.4.5",
     "http-proxy": "^1.9.0",
+    "jsdom": "^8.1.0",
     "jsonwebtoken": "^5.4.1",
     "knowtify-node": "^0.1.0",
     "memjs": "^0.8.7",
@@ -47,7 +48,7 @@
     "time-grunt": "^1.0.0"
   },
   "engines": {
-    "node": "0.12.4"
+    "node": "4.4.0"
   },
   "scripts": {
     "test": "grunt test",
