--- a/bower.json
+++ b/bower.json
@@ -42,10 +42,10 @@
     "ladda": "~0.9.8",
     "angular-ladda": "~0.3.1",
     "summernote": "~0.6.0",
-    "angular-summernote": "^0.8.1"
+    "angular-summernote": "~0.3.1"
   },
   "resolutions": {
-    "angular": "1.4.9",
+    "angular": "1.4.10",
     "angulartics": "~0.19.0",
     "sweetalert": ">=1.1.0",
     "bootstrap": "~3.3.6",
