--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-sdk": "^2.2.4",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
+    "bugsnag": "^1.7.0",
     "connect-wwwhisper": "^0.1.13",
     "debug-trace": "~0.2.3",
     "express": "^4.13.3",
