--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "StartupCommunity.org",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "authors": [
     "James Gentes"
   ],
@@ -29,7 +29,7 @@
     "mixpanel": "~2.5.1",
     "moment": "~2.8.3",
     "satellizer": "~0.13.0",
-    "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.0.1",
+    "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.1.3",
     "ng-file-upload": "~8.0.1",
     "ng-file-upload-shim": "~8.0.1",
     "bootstrap-tour": "~0.10.2",
@@ -41,14 +41,10 @@
     "angular-summernote": "~0.3.1"
   },
   "resolutions": {
-    "angular": "1.4.10",
-    "angulartics": "~0.19.0",
-    "sweetalert": ">=1.1.0",
+    "angular": "~1.4.11",
+    "sweetalert": ">=1.1.3",
     "bootstrap": "~3.3.6",
     "jquery": ">= 1.9.0",
-    "bootstrap-tour": "~0.10.2",
-    "angular-route": "~1.4.9",
-    "angular-cookies": "^1.5.0",
-    "summernote": "~0.8.0"
+    "bootstrap-tour": "~0.10.2"
   }
 }
