--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.0.0",
+    "grunt-lineending": "^0.2.4",
     "grunt-usemin": "^3.1.1",
     "jshint-stylish": "^2.1.0",
     "load-grunt-tasks": "^3.3.0",
