--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ghost-s3-storage": "^0.2.2",
     "grunt": "^0.4.5",
     "http-proxy": "^1.9.0",
+    "jquery-param": "^0.2.0",
     "jsdom": "^8.1.0",
     "jsonwebtoken": "^5.4.1",
     "knowtify-node": "^0.1.0",
