--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "debug-trace": "~0.2.3",
     "express": "^4.13.3",
     "express-sslify": "^1.0.1",
-    "ghost": "^0.7.8",
-    "ghost-s3-storage": "^0.2.2",
     "grunt": "^0.4.5",
     "http-proxy": "^1.9.0",
     "jquery-param": "^0.2.0",
@@ -24,6 +22,7 @@
     "memjs": "^0.8.7",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
+    "mysql2": "^1.5.1",
     "nodalytics": "^1.1.0",
     "q": "^1.4.1",
     "request": "^2.67.0",
