--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem",
   "private": true,
   "dependencies": {
-    "aws-sdk": "^2.2.4",
+    "aws-sdk": "^2.171.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
     "bugsnag": "^1.7.0",
     "cloudant": "^1.7.1",
     "connect-wwwhisper": "^0.1.13",
+    "continuation-local-storage": "^3.2.1",
     "debug-trace": "~0.2.3",
     "express": "^4.13.3",
     "express-sslify": "^1.0.1",
+    "forest-express-sequelize": "^2.0.4",
     "grunt": "^0.4.5",
     "http-proxy": "^1.9.0",
     "jquery-param": "^0.2.0",
@@ -27,7 +29,8 @@
     "q": "^1.4.1",
     "request": "^2.67.0",
     "request-debug": "^0.2.0",
-    "satellizer": "~0.13.0"
+    "satellizer": "~0.13.0",
+    "sequelize": "^4.28.5"
   },
   "devDependencies": {
     "bower": "^1.7.0",
