--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.3",
     "express-sslify": "^1.0.1",
     "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
     "http-proxy": "^1.9.0",
     "jquery-param": "^0.2.0",
     "jsdom": "^11.5.1",
@@ -51,10 +52,10 @@
     "time-grunt": "^1.0.0"
   },
   "engines": {
-    "node": "7.10.1"
+    "node": "9.3.0"
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "bower install"
+    "heroku-postbuild": "bower install"
   }
 }
