--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "bower": "^1.8.0",
+    "colors": "^1.1.2",
     "grunt-cloudflare-purge": "^0.1.0",
     "grunt-concurrent": "^2.1.0",
     "grunt-contrib-clean": "^1.1.0",
@@ -51,7 +52,8 @@
     "time-grunt": "^1.0.0"
   },
   "engines": {
-    "node": "9.3.0"
+    "node": "9.3.0",
+    "npm": "5.5.1"
   },
   "scripts": {
     "test": "grunt test",
