--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem",
   "private": true,
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "aws-sdk": "^2.176.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
@@ -17,7 +18,6 @@
     "http-proxy": "^1.9.0",
     "jsdom": "^11.4.0",
     "jsonwebtoken": "^8.1.0",
-    "knowtify-node": "^0.1.0",
     "memjs": "^1.1.0",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
