changed heroku-postbuild to postinstall

--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "heroku-postbuild": "bower install"
+    "postinstall": "bower install && grunt build"
   }
 }
