--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "bower install && grunt build"
+    "postinstall": "bower install"
   }
 }
