--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "dependencies": {
     "@sendgrid/mail": "^6.2.1",
-    "aws-sdk": "^2.176.0",
+    "aws-sdk": "^2.204.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
-    "bugsnag": "^2.0.1",
+    "bugsnag": "^2.3.0",
     "cloudant": "^1.7.1",
-    "connect-wwwhisper": "^0.1.13",
+    "connect-wwwhisper": "^0.1.20",
     "continuation-local-storage": "^3.2.1",
     "express": "^4.13.3",
     "express-sslify": "^1.0.1",
@@ -18,7 +18,6 @@
     "http-proxy": "^1.9.0",
     "jsdom": "^11.4.0",
     "jsonwebtoken": "^8.1.0",
-    "memjs": "^1.1.0",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "mysql2": "^1.5.1",
@@ -27,7 +26,7 @@
     "request": "^2.67.0",
     "request-debug": "^0.2.0",
     "satellizer": "~0.15.5",
-    "sequelize": "^4.28.6"
+    "sequelize": "^4.35.1"
   },
   "devDependencies": {
     "bower": "^1.8.0",
@@ -41,7 +40,7 @@
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-htmlmin": "^2.4.0",
     "grunt-contrib-less": "^1.1.0",
-    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-filerev": "^2.0.0",
     "grunt-usemin": "^3.1.1",
