moved lodash to app.html

--- a/package.json
+++ b/package.json
@@ -5,32 +5,32 @@
   "private": true,
   "dependencies": {
     "@sendgrid/mail": "^6.2.1",
-    "aws-sdk": "^2.204.0",
+    "aws-sdk": "^2.213.1",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
-    "bugsnag": "^2.3.0",
+    "bugsnag": "^2.3.1",
     "cloudant": "^1.7.1",
     "connect-wwwhisper": "^0.1.20",
     "continuation-local-storage": "^3.2.1",
-    "express": "^4.13.3",
+    "express": "^4.16.3",
     "express-sslify": "^1.0.1",
     "grunt": "^1.0.1",
     "http-proxy": "^1.9.0",
     "jsdom": "^11.4.0",
-    "jsonwebtoken": "^8.1.0",
+    "jsonwebtoken": "^8.2.0",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
-    "mysql2": "^1.5.1",
+    "mysql2": "^1.5.3",
     "nodalytics": "^1.1.0",
     "q": "^1.4.1",
-    "request": "^2.67.0",
+    "request": "^2.85.0",
     "request-debug": "^0.2.0",
     "satellizer": "~0.15.5",
-    "sequelize": "^4.35.1"
+    "sequelize": "^4.37.4"
   },
   "devDependencies": {
     "bower": "^1.8.0",
-    "colors": "^1.1.2",
+    "colors": "^1.2.1",
     "grunt-cloudflare-purge": "^0.1.0",
     "grunt-concurrent": "^2.1.0",
     "grunt-contrib-clean": "^1.1.0",
@@ -40,7 +40,7 @@
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-htmlmin": "^2.4.0",
     "grunt-contrib-less": "^1.1.0",
-    "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
+    "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-filerev": "^2.0.0",
     "grunt-usemin": "^3.1.1",
