--- a/package.json
+++ b/package.json
@@ -5,21 +5,19 @@
   "private": true,
   "dependencies": {
     "@bower_components/metisMenu": "onokumus/metisMenu#~2.4.0",
-    "@sendgrid/mail": "^6.2.1",
-    "angular": "1.2.32",
-    "angular-bootstrap": "^0.12.2",
-    "angular-bootstrap-tour": "^0.3.3-alpha.1",
-    "angular-cookies": "^1.6.10",
-    "angular-h-sweetalert": "^2.0.1",
-    "angular-ladda": "^0.4.3",
-    "angular-notify": "^1.2.0",
-    "angular-sanitize": "^1.6.10",
-    "angular-ui-router": "~0.2.12",
-    "angular-ui-utils": "^0.1.1",
-    "angulartics": "^1.6.0",
-    "angulartics-google-analytics": "^0.5.0",
-    "angulartics-mixpanel": "^0.1.4",
-    "awesome-bootstrap-checkbox": "^1.0.1",
+    "@sendgrid/mail": "6.2.1",
+    "angular": "1.4.14",
+    "angular-bootstrap-tour": "0.3.3-alpha.1",
+    "angular-cookies": "1.6.10",
+    "angular-h-sweetalert": "1.4.7",
+    "angular-ladda": "0.4.3",
+    "angular-notify": "1.2.0",
+    "angular-sanitize": "1.4.14",
+    "angular-ui-bootstrap": "^2.5.6",
+    "angular-ui-router": "0.2.18",
+    "angular-ui-utils": "0.1.1",
+    "angulartics-google-analytics": "0.5.0",
+    "awesome-bootstrap-checkbox": "1.0.1",
     "aws-sdk": "^2.219.1",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
@@ -53,16 +51,18 @@
     "sequelize": "^4.37.4",
     "spin.js": "^3.1.0",
     "summernote": "^0.8.10",
-    "sweetalert": "^2.1.0",
-    "sweetalert2": "^7.19.0",
+    "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.1.3",
     "ui-select": "^0.19.8"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
+    "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jshint-stylish": "^2.1.0",
     "less": "^3.0.1",
