--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem",
   "private": true,
   "dependencies": {
-    "@bower_components/metisMenu": "onokumus/metisMenu#~2.4.0",
     "@sendgrid/mail": "6.2.1",
+    "@uirouter/angularjs": "1.0.15",
     "angular": "1.4.14",
     "angular-bootstrap-tour": "0.3.3-alpha.1",
     "angular-cookies": "1.6.10",
@@ -13,67 +13,67 @@
     "angular-ladda": "0.4.3",
     "angular-notify": "1.2.0",
     "angular-sanitize": "1.4.14",
-    "angular-ui-bootstrap": "^2.5.6",
-    "angular-ui-router": "0.2.18",
+    "angular-ui-bootstrap": "2.5.6",
     "angular-ui-utils": "0.1.1",
     "angulartics-google-analytics": "0.5.0",
     "awesome-bootstrap-checkbox": "1.0.1",
-    "aws-sdk": "^2.219.1",
-    "bcryptjs": "^2.3.0",
-    "body-parser": "^1.14.1",
-    "bootstrap": "^4.1.0",
-    "bootstrap-tour": "^0.12.0",
-    "bugsnag": "^2.3.1",
-    "colors": "^1.2.1",
-    "connect-wwwhisper": "^0.1.20",
-    "continuation-local-storage": "^3.2.1",
-    "es5-shim": "^4.5.10",
-    "express": "^4.16.3",
-    "express-sslify": "^1.0.1",
-    "font-awesome": "^4.7.0",
-    "fontawesome": "^4.7.2",
-    "jquery": "^3.3.1",
-    "jsdom": "^11.7.0",
-    "jsonwebtoken": "^8.2.0",
-    "ladda": "^1.0.6",
-    "lodash": "^4.17.5",
-    "method-override": "^2.3.5",
-    "moment": "^2.22.1",
-    "morgan": "^1.6.1",
-    "mysql2": "^1.5.3",
-    "ng-file-upload": "^12.2.13",
-    "nodalytics": "^1.1.0",
-    "popper.js": "^1.14.3",
-    "q": "^1.4.1",
-    "request": "^2.85.0",
-    "request-debug": "^0.2.0",
-    "satellizer": "^0.15.5",
-    "sequelize": "^4.37.4",
-    "spin.js": "^3.1.0",
-    "summernote": "^0.8.10",
-    "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.1.3",
-    "ui-select": "^0.19.8"
+    "aws-sdk": "2.219.1",
+    "babel-polyfill": "6.26.0",
+    "bcryptjs": "2.3.0",
+    "body-parser": "1.14.1",
+    "bootstrap": "4.1.0",
+    "bootstrap-tour": "0.12.0",
+    "bugsnag": "2.3.1",
+    "colors": "1.2.1",
+    "connect-wwwhisper": "0.1.20",
+    "continuation-local-storage": "3.2.1",
+    "es5-shim": "4.5.10",
+    "express": "4.16.3",
+    "express-sslify": "1.0.1",
+    "font-awesome": "4.7.0",
+    "fontawesome": "4.7.2",
+    "jquery": "3.3.1",
+    "jsdom": "11.7.0",
+    "jsonwebtoken": "8.2.0",
+    "ladda": "1.0.6",
+    "lodash": "4.17.5",
+    "method-override": "2.3.5",
+    "metismenu": "2.7.7",
+    "moment": "2.22.1",
+    "morgan": "1.6.1",
+    "mysql2": "1.5.3",
+    "ng-file-upload": "12.2.13",
+    "nodalytics": "1.1.0",
+    "popper.js": "1.14.3",
+    "q": "1.4.1",
+    "request": "2.85.0",
+    "request-debug": "0.2.0",
+    "satellizer": "0.15.5",
+    "sequelize": "4.37.4",
+    "spin.js": "3.1.0",
+    "summernote": "0.8.10",
+    "sweetalert": "1.1.3",
+    "ui-select": "0.19.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.44",
     "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "jshint-stylish": "^2.1.0",
-    "less": "^3.0.1",
-    "less-loader": "^4.1.0",
-    "progress-webpack-plugin": "^0.0.20",
-    "protractor": "^5.3.0",
-    "style-loader": "^0.21.0",
-    "ttf-loader": "^1.0.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "babel-loader": "8.0.0-beta.2",
+    "css-loader": "0.28.11",
+    "file-loader": "1.1.11",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "jshint-stylish": "2.1.0",
+    "less": "3.0.1",
+    "less-loader": "4.1.0",
+    "progress-webpack-plugin": "0.0.20",
+    "protractor": "5.3.0",
+    "style-loader": "0.21.0",
+    "ttf-loader": "1.0.2",
+    "url-loader": "1.0.1",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15"
   },
   "engines": {
     "node": "9.3.0",
