--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "babel-polyfill": "6.26.0",
     "bcryptjs": "2.3.0",
     "body-parser": "1.14.1",
-    "bootstrap": "4.1.0",
     "bootstrap-tour": "0.12.0",
     "bugsnag": "2.3.1",
     "colors": "1.2.1",
@@ -60,6 +59,8 @@
     "@babel/preset-env": "7.0.0-beta.44",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "8.0.0-beta.2",
+    "bootstrap-loader": "^2.2.0",
+    "bootstrap-sass": "^3.3.7",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "0.28.11",
@@ -68,8 +69,11 @@
     "jshint-stylish": "2.1.0",
     "less": "3.0.1",
     "less-loader": "4.1.0",
+    "node-sass": "^4.9.0",
     "progress-webpack-plugin": "0.0.20",
     "protractor": "5.3.0",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^7.0.1",
     "style-loader": "0.21.0",
     "ttf-loader": "1.0.2",
     "url-loader": "1.0.1",
