--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "build": "webpack",
-    "postinstall": "webpack"
+    "build": "webpack"
   }
 }
