--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "build": "webpack"
+    "build": "webpack",
+    "postbuild": "webpack"
   }
 }
