--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "connect-wwwhisper": "0.1.20",
     "continuation-local-storage": "3.2.1",
     "es5-shim": "4.5.10",
+    "eslint": "^4.19.1",
     "express": "4.16.3",
     "express-sslify": "1.0.1",
     "font-awesome": "4.7.0",
@@ -64,6 +65,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "0.28.11",
+    "eslint-loader": "^2.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "3.2.0",
     "jshint-stylish": "2.1.0",
