--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "metismenu": "2.7.7",
     "moment": "2.22.1",
     "morgan": "1.6.1",
-    "mysql2": "1.5.3",
+    "mysql2": "^1.5.3",
     "ng-file-upload": "12.2.13",
     "nodalytics": "1.1.0",
     "popper.js": "1.14.3",
@@ -49,7 +49,7 @@
     "request": "2.85.0",
     "request-debug": "0.2.0",
     "satellizer": "0.15.5",
-    "sequelize": "4.37.4",
+    "sequelize": "^4.37.8",
     "spin.js": "3.1.0",
     "summernote": "0.8.10",
     "sweetalert": "1.1.3",
