--- a/app.json
+++ b/app.json
@@ -90,7 +90,8 @@
   },
   "formation": {
     "web": {
-      "quantity": 1
+      "quantity": 1,
+      "size": "hobby"
     }
   },
   "addons": [
@@ -99,6 +100,6 @@
     "wwwhisper"
   ],
   "buildpacks": [{
-    "url": "https://github.com/mbuchetics/heroku-buildpack-nodejs-grunt.git"
+    "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
   }]
 }
