node_env production

--- a/app.json
+++ b/app.json
@@ -61,7 +61,8 @@
       "required": true
     },
     "NODE_ENV": {
-      "required": true
+      "required": true,
+      "value": "production"
     },
     "NODE_MODULES_CACHE": {
       "required": true
