update for lodash

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "jsdom": "11.7.0",
     "jsonwebtoken": "8.2.0",
     "ladda": "1.0.6",
-    "lodash": "4.17.5",
-    "method-override": ">=2.3.10",
+    "lodash": "^4.17.11",
+    "method-override": "^2.3.10",
     "metismenu": "2.7.7",
     "moment": "2.22.1",
     "morgan": "1.6.1",
