updated with new webpack build process for heroku

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "build": "webpack",
-    "postinstall": "webpack"
-  }
+    "build": "webpack"
+  },
+  "heroku-run-build-script": true
 }
